--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ vdr (1.4.2-1) unstable; urgency=low
 
   * New upstream release
     - Removed 01_IA64-FTBFS-fix.dpatch
+  * Added Tobias Grimm and Thomas Günther to Uploaders
 
- -- Thomas Schmidt <tschmidt@debian.org>  Sun, 27 Aug 2006 12:11:19 +0200
+ -- Thomas Schmidt <tschmidt@debian.org>  Tue, 29 Aug 2006 07:57:05 +0200
 
 vdr (1.4.1-1) unstable; urgency=low
 
