--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vdr (1.4.3-1) UNRELEASED; urgency=low
+
+  * New upstream release
+    - Added LC_ALL=$VDR_LANG when calling vdr in debian/runvdr 
+
+ -- Thomas Schmidt <tschmidt@debian.org>  Sat, 23 Sep 2006 18:26:02 +0200
+
 vdr (1.4.2-1) unstable; urgency=low
 
   * New upstream release
