--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vdr (1.4.4-1) UNRELEASED; urgency=low
+
+  * (NOT RELEASED YET) New upstream release
+  * Renamed and updated optional subtitles-ttxtsubs example patch
+
+ -- Tobias Grimm <tg@e-tobi.net>  Sat,  4 Nov 2006 21:19:39 +0100
+
 vdr (1.4.3-1) unstable; urgency=low
 
   * New upstream release
