--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vdr (1.4.4-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+  * Removed Conflicts line from plugin template
+
+ -- Tobias Grimm <tg@e-tobi.net>  Wed,  8 Nov 2006 22:40:36 +0100
+
 vdr (1.4.4-1) unstable; urgency=low
 
   [ Tobias Grimm ]
