--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,17 @@
 vdr (1.4.4-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+
+  [ Tobias Grimm ]
   * Removed Conflicts line from plugin template
 
- -- Tobias Grimm <tg@e-tobi.net>  Wed,  8 Nov 2006 22:40:36 +0100
+  [ Thomas Günther ]
+  * Replaced VDRdevel adaptions in debian/rules and plugin-template/rules
+    with make-special-vdr
+  * Install make-special-vdr into vdr-dev package - plugins can use this to
+    build plugin packages for special vdr packages
+
+ -- Thomas Günther <tom@toms-cafe.de>  Sun, 17 Dec 2006 16:26:55 +0100
 
 vdr (1.4.4-1) unstable; urgency=low
 
